# hubM-cli

./: .gitignore  pyproject.toml
cli/: config.py  database.py  main.py  models.py
cli/commands/: __init__.py  config_commands.py  group_commands.py  usb_commands.py  user_commands.py
cli/templates/: models.py
commands/: config_commands.py  group_commands.py
hubm-cli/: config.py  main.py
hubm-cli/commands/: __init__.py  config_commands.py  group_commands.py  usb_commands.py  user_commands.py
hubm-cli/utils/: utils.py
